--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -33,8 +33,5 @@
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
-  },
-  "engines": {
-    "node": "8.10.0"
   }
 }
