--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -29,7 +29,8 @@
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
-    "mongoose": "^5.0.16"
+    "mongoose": "^5.0.16",
+    "socket.io": "^2.1.0"
   },
   "engines": {
     "node": "8.10.0"
